@@ -30,11 +30,9 @@ if (OperatingSystem.current().isWindows()) {
 }
 def mpaths = "$projectDir/../../../third_party/jogamp/jar" +
         separator + "$projectDir/../../../third_party/jogamp/jar/gluegen-rt.jar" +
-        separator + "$projectDir/../../../third_party/thrift/libthrift-0.19.0.jar" +
         separator + "$projectDir/../../../third_party/jogamp/jar/jogl-all.jar"
 compileJava.options.compilerArgs += [
     '--module-path', mpaths,
-    '--add-modules', 'jogl.all,gluegen.rt,org.apache.thrift',
     '--add-exports', 'jogl.all/com.jogamp.nativewindow=jcef',
     '--add-exports', 'jogl.all/com.jogamp.opengl.awt=jcef',
     '--add-exports', 'jogl.all/com.jogamp.opengl=jcef',
@@ -74,12 +72,10 @@ dependencies {
     implementation files(
         "$projectDir/../../../third_party/jogamp/jar/jogl-all.jar",
         "$projectDir/../../../third_party/jogamp/jar/gluegen-rt.jar",
-        "$projectDir/../../../third_party/thrift/libthrift-0.19.0.jar"
     )
     testImplementation files(
         "$projectDir/../../../third_party/junit/junit-platform-console-standalone-1.10.0.jar",
         "$projectDir/../../../third_party/gson/gson-2.10.1.jar",
-        "$projectDir/../../../third_party/thrift/libthrift-0.19.0.jar",
         "$projectDir/../../../third_party/jakarta/jakarta.xml.bind-api-2.3.2.jar",
         "$projectDir/../../../third_party/jbrapi/jbr-api-17.1.10.0.jar"
     )
